--- a/src/main/resources/templates/administrator/gldministrator.html
+++ b/src/main/resources/templates/administrator/gldministrator.html
@@ -4,18 +4,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>海马管理员信息管理 - 海马官网</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="stylesheet" th:href="@{css/commonn.css}" />
-		<link rel="stylesheet" th:href="@{css/base.css}" />
-		<link rel="stylesheet" th:href="@{css/pop.css}" />
-		<script type="text/javascript" th:src="@{js/jquery-3.2.1.min.js}" ></script>
-		<script type="text/javascript" th:src="@{js/account.js}" ></script>
+		<link rel="shortcut icon" type="image/x-icon" th:href="@{/favicon.ico}" />
+		<link rel="stylesheet" th:href="@{/css/commonn.css}" />
+		<link rel="stylesheet" th:href="@{/css/base.css}" />
+		<link rel="stylesheet" th:href="@{/css/pop.css}" />
+		<script type="text/javascript" th:src="@{/js/jquery-3.2.1.min.js}" ></script>
+		<script type="text/javascript" th:src="@{/js/account.js}" ></script>
 
 	</head>
 
 	<body>
-		
-		<div class="wrap">
+	<div sec:authorize="hasRole('ROLE_ADMIN')"> <!-- 用户类型为ROLE_ADMIN 显示 -->
+		<div th:include="common/header_xt" ></div>
+	</div>
+
+	<div class="wrap">
 			<!--内容开始-->
 			<div class="containermcompany">
 				<div class="width-wrap white-bg add-border cl">
@@ -44,8 +47,8 @@
 				<div class="control-input control-text  relative1">
 		            <select name="" class="input-text input-text-long1 left-wrap"> <!--0草稿  1已删除  2已提交（待审批）  3审批通过   4审批不通过-->
 						<option value="0">请选择</option> 
-						<option value="1">采购管理员</option> 
-						<option value="2">采购审批管理员</option> 
+						<option value="1">采购管理员</option>
+						<option value="2">采购审批管理员</option>
 						<option value="3">医用品管理员</option> 
 					</select> 
 				</div>
@@ -101,26 +104,16 @@
 					</table>
 				        </div>
 				        <!--列表结束-->
-				        <!--翻页开始-->
-				        <div class="paging-box">
-				        	<div class="paging align-right sz14">
-				        		<a class="ky_pre_page" href="javascript:void(0);">
-				        			<i class="common-icon-New pre-icon"></i>
-				        		</a>
-				        	<a href="javascript:void(0);" class="a">1</a>
-				        	<a href="javascript:void(0);">2</a>
-				        	<a href="javascript:void(0);">3</a>
-				        	<a href="javascript:void(0);">4</a>
-				        	<a href="javascript:void(0);">5</a>
-				        	<span>...</span>
-				        	<a href="javascript:void(0);">8</a>
-				        	<a href="javascript:void(0);">9</a>
-				        	<a href="#" class="ky_next_page delmr">
-				        		<i class="common-icon-New pre-icon flipx"></i>
-				        	</a>
-				        	</div>
-				        </div>
-				        <!--翻页结束-->
+					<form action="/administrator/medicalsupplies" method="post" style="margin:0px;display:inline;">
+						跳转到: <input type="text" style="width: 30px" name="p" />页
+						<!--(user_id=${user_id},name=${name},status=${status})-->
+						<input type="hidden"  name="name" th:value="${name}"/>
+						<input type="hidden"  name="user_id" th:value="${user_id}"/>
+						<input type="hidden"  name="status" th:value="${status}"/>
+						<input type="submit" value="跳转" class="button green-button mb"/>
+					</form>
+				</div>
+				<!--翻页结束-->
 				    </div>
 					<!--右侧内容结束-->
 
