--- a/src/main/resources/templates/administrator/procurement.html
+++ b/src/main/resources/templates/administrator/procurement.html
@@ -33,54 +33,42 @@
 						<h3>采购发布管理<a id="tjcgxx" href="#" class="button7 green-button mb" style="text-decoration: none;float: right">添加</a></h3>
 					</div>
 			<!--筛选开始-->
-                <form>
+                <form method="get" action="/administrator/procurement">
 					<div class="form-wrap-5" id="divCompanyInfo">
 						<div class=" control-row">
 							<div class="control-label">
-								医用耗材名称
+                                医用耗材名称
 							</div>
 							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="医用耗材名称" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
+								<input type="text" placeholder="医用耗材名称" name="name" class=" input-text input-text-long1 left-wrap input-company-name">
 							</div>
-							
 						</div>
 						<div class=" control-row">
 							<div class="control-label">
-								创建时间
+								交付时间
 							</div>
 							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="创建时间" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
+								<input type="text" placeholder="交付时间" name="delivery_time" class=" input-text input-text-long1 left-wrap input-company-name">
 							</div>
-							
-						</div>
-						
-						<div class=" control-row">
-							<div class="control-label">
-								修改时间
-							</div>
-							<div class="control-input control-text  relative1">
-								<input type="text" placeholder="修改时间" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
-							</div>
-							
 						</div>
 						<div class=" control-row">
 							<div class="control-label">
-								医用耗材类型
+								发布状态
 							</div>
 							<div class="control-input control-text  relative1">
-					            <select name="" class="input-text input-text-long1 left-wrap"> <!--0草稿  1已删除  2已提交（待审批）  3审批通过   4审批不通过-->
-									<option value="0">请选择</option> 
-									<option value="1">已删除</option> 
-									<option value="2">待审批</option> 
-									<option value="3">审批通过</option> 
-									<option value="4">审批不通过</option> 
+					            <select name="status" class="input-text input-text-long1 left-wrap"> <!--0草稿  1已删除  2已提交（待审批）  3审批通过   4审批不通过-->
+									<option value="">请选择</option>
+                                    <option value="1">草稿</option>
+                                    <option value="2">已删除</option>
+									<option value="3">已发布</option>
+									<option value="4">已失效</option>
 								</select> 
 							</div>
 						</div>
 					</div>
 					<div align="center">
-						<input type="button" class="button2 mb" value="重置"/>
-					<input type="button" class="button green-button mb" value="查询"/>
+						<input type="reset" class="button2 mb" value="重置"/>
+				    	<input type="submit" class="button green-button mb" value="查询"/>
 					</div>
 					
                 </form>
@@ -91,54 +79,58 @@
                 <div class="table-list sz14">
                     <table class="table-fixed" width="100%" cellspacing="0" cellpadding="0">
                         <thead>
-                        <tr>
-                            <th class="align-center" width="60">编号ID</th>
-                            <th class="align-center" width="90">医用耗材名称</th>
-                            <th class="align-center" width="50">类型</th>
-                            <th class="align-center" width="60">最高价格</th>
-                            <th class="align-center" width="60" >采购数量</th>
-                            <th class="align-center" width="60">状态</th>
-                            <th class="align-center" width="50">操作人</th>
-                            <th class="align-center" width="100">创建时间</th>
-                            <th class="align-center" width="100">修改时间</th>
-                            <th class="align-center" width="120">操作</th>
-                        </tr>
+                            <tr >
+                                <th class="align-center" width="60">编号ID</th>
+                                <th class="align-center" width="90">医用耗材名称</th>
+                                <th class="align-center" width="100">医用耗材类型</th>
+                                <th class="align-center" width="60">发布价格</th>
+                                <th class="align-center" width="60">采购数量</th>
+                                <th class="align-center" width="60">发布状态</th>
+                                <th class="align-center" width="50">操作人</th>
+                                <th class="align-center" width="100">交付时间</th>
+                                <th class="align-center" width="120">操作</th>
+                            </tr>
                         </thead>
                         <tbody class="recordLists">
-    
-					    <tr class="drdc">
+                            <tr class="drdc" th:each="CustomMedicasupplies : ${jq.rows}">
+                                <td class="align-center" th:text="${CustomMedicasupplies.id}">111</td>
+                                <td class="align-center relative"th:text="${CustomMedicasupplies.name}" ></td>
+                                <td class="align-center font-pro relative" th:text="${CustomMedicasupplies.meinfo_status}"></td>
+                                <td class="align-center font-pro relative" th:text="${CustomMedicasupplies.rel_quotation}"></td>
+                                <td class="align-centert" th:text="${CustomMedicasupplies.number}"></td>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 1">
+                                    <td class="align-center" >草稿</td>
+                                </div>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 2">
+                                    <td class="align-center" >已删除</td>
+                                </div>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 3">
+                                    <td class="align-center" >已发布</td>
+                                </div>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 4">
+                                    <td class="align-center" >已失效</td>
+                                </div>
+                                <td class="align-centert" th:text="${CustomMedicasupplies.user_id}"></td>
+                                <td class="align-center" th:text="${CustomMedicasupplies.delivery_time}"></td>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 1">
+                                    <td class="align-center">
+                                        <input th:onclick="'javascript:updateMed(\''+${CustomMedicasupplies.id}+'\');'"  type="button" class="xgcgxx button2 mb" value="修改" />
+                                        <a class="button mb" onclick="return confirm('您确定要删除吗？')" th:href="@{'/deletemedicalsupplies/'+${CustomMedicasupplies.id}}" >删除</a>
+                                    </td>
+                                </div>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 2">
+                                    <td class="align-center">--</td>
+                                </div>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 3">
+                                    <td class="align-center">
+                                        <a class="button mb" onclick="return confirm('您确定要下线吗？')" th:href="@{'/updateStatus/'+${CustomMedicasupplies.id}}" >删除</a>
+                                    </td>
 
-					        <td class="align-center">111</td>
-					        <td class="align-center relative">
-					            <em class="fs1">针管</em>
-					        </td>
-					        <td class="align-center font-pro relative">
-					            <em class="fs2 font-pro">消耗品</em>
-					        </td>
-					        <td class="align-center font-pro relative">
-					            <em class="fs4 sz14">400</em>
-					        </td>
-					        <td class="align-center font-pro relative">
-					            <em class="fs4 sz14">400</em>
-					        </td>
-					        <td class="align-centert">
-					        	<em class="fs2 font-pro">发布</em>
-					        </td>
-					        <td class="align-center">
-					        	<em class="fs2 font-pro">XXX</em>
-					        </td>
-					        <td class="align-centert">
-					        	<em class="fs2 font-pro">2015-11-03</em>
-					        </td>
-					        <td class="align-center">
-					        	<em class="fs2 font-pro">2015-11-03</em>
-					        </td>
-					        <td class="align-center">
-					        	<input id="xgcgxx" th:onclick="'javascript:updateMed(\''+${SysUser.id}+'\');'"  type="button" class="button2 mb" value="修改" />
-					         	<input class="button mb" onclick="return confirm('您确定要删除吗？')" th:href="@{'/deleteMedical/'+${MedicalInformation.id}}" />
-					            	
-					        </td>
-					    </tr>
+                                </div>
+                                <div th:if="${CustomMedicasupplies.medic_status} == 4">
+                                    <td class="align-center">--</td>
+                                </div>
+                            </tr>
 					    </tbody>
 					</table>
 				        </div>
@@ -147,17 +139,17 @@
                     <div class=" split-line mt mb"></div>
                     <div style="text-align:center;font-size: 15px">
                         <label>第<span th:text="${jq.p}"></span>/<span th:text="${jq.totolPage}"></span>页   共<span th:text="${jq.total}"></span>条</label>
-                        <a th:href="@{/administrator/medicalsupplies(p = 1,user_id=${user_id},name=${name},status=${status})}" type="button" role=button class="button green-button mb">首页</a>
-                        <a th:if="${jq.p > 1}" th:href="@{/administrator/medicalsupplies(p=${jq.p - 1},user_id=${user_id},name=${name},status=${status})}"  type="button" role=button class="button green-button mb">上一页</a>
+                        <a th:href="@{/administrator/procurement(p = 1,delivery_time=${delivery_time},name=${name},status=${status})}" type="button" role=button class="button green-button mb">首页</a>
+                        <a th:if="${jq.p > 1}" th:href="@{/administrator/procurement(p=${jq.p - 1},delivery_time=${delivery_time},name=${name},status=${status})}"  type="button" role=button class="button green-button mb">上一页</a>
                         <a th:if="${jq.p <= 1}" class="button green-button mb">上一页</a>
-                        <a th:if="${jq.p < jq.pageSize}" th:href="@{/administrator/medicalsupplies(p=${jq.p + 1},user_id=${user_id},name=${name},status=${status})}"  type="button" role=button class="button green-button mb">下一页</a>
+                        <a th:if="${jq.p < jq.pageSize}" th:href="@{/administrator/procurement(p=${jq.p + 1},delivery_time=${delivery_time},name=${name},status=${status})}"  type="button" role=button class="button green-button mb">下一页</a>
                         <a th:if="${jq.p = jq.pageSize}"  type="button" class="button green-button mb">下一页</a>
-                        <a th:href="@{/administrator/medicalsupplies(p=${jq.totolPage},user_id=${user_id},name=${name},status=${status})}" type="button" role=button class="button green-button mb">尾页</a>
-                        <form action="/administrator/medicalsupplies" method="get" style="margin:0px;display:inline;">
+                        <a th:href="@{/administrator/procurement(p=${jq.totolPage},delivery_time=${delivery_time},name=${name},status=${status})}" type="button" role=button class="button green-button mb">尾页</a>
+                        <form action="/administrator/procurement" method="get" style="margin:0px;display:inline;">
                             跳转到: <input type="text" style="width: 30px" name="p" />页
                             <!--(user_id=${user_id},name=${name},status=${status})-->
                             <input type="hidden"  name="name" th:value="${name}"/>
-                            <input type="hidden"  name="user_id" th:value="${user_id}"/>
+                            <input type="hidden"  name="user_id" th:value="${delivery_time}"/>
                             <input type="hidden"  name="status" th:value="${status}"/>
                             <input type="submit" value="跳转" class="button green-button mb"/>
                         </form>
@@ -175,48 +167,52 @@
 		<a href="javascript:void(0);" class="right-wrap" id="right-wrap5">
 			<i class="common-icon close-icon"></i>
 		</a>
-		<h3>添加采购发布信息</h3>
+		<h3>采购发布信息管理</h3>
 	</div>
 	<div class="pop-pay">
-		<form>
+		<form method="post" action="/addOrupdatemedical">
+            <input id="yid"  type="text" placeholder="医用品名称" name="id" value="" style="display:none">
 			<div class=" control-row">
 				<div class="control-label">
-					医用耗材名称：
+					医用耗材名称
 				</div>
 				<div class="control-input control-text  relative1">
-					<input type="text" placeholder="医用耗材名称" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
+					<select onclick="fillShijuanming()" id="selectSM" name="name" class="input-text input-text-long1 left-wrap"> <!--0草稿  1已删除  2已提交（待审批）  3审批通过   4审批不通过-->
+						<option value="">请选择</option>
+                        <option th:selected="${sjm.name  eq sjm.name}"
+                                th:each="sjm : ${sjm}"
+                                th:value="${sjm.name}" th:text="${sjm.name}">
+                        </option>
+					</select>
+
 				</div>
-				
 			</div>
-			
-			<div class=" control-row">
+			<div class="control-row">
 				<div class="control-label">
-					医用品类型：
+					发布价格：
 				</div>
 				<div class="control-input control-text  relative1">
-					<input type="text" placeholder="医用品类型" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
+					<input type="text" placeholder="发布价格" name="rel_quotation" class=" input-text input-text-long1 left-wrap input-company-name">
 				</div>
-				
-			</div>
-			<div class=" control-row">
-				<div class="control-label">
-					最高价格：
-				</div>
-				<div class="control-input control-text  relative1">
-					<input type="text" placeholder="最高价格" name="companyName" class=" input-text input-text-long1 left-wrap input-company-name">
-				</div>
-				
 			</div>
 			<div class=" control-row">
 				<div class="control-label control-label-width">
 					采购数量：
 				</div>
 				<div class="control-input select-small control-text lh40 relative1 cl">
-					<input type="text" placeholder="采购数量" name="companyId" class=" input-text input-text-long1 left-wrap input-company-name">
+					<input type="text" placeholder="采购数量" name="number" class=" input-text input-text-long1 left-wrap input-company-name">
+				</div>
+			</div>
+			<div class=" control-row">
+				<div class="control-label control-label-width">
+					交付时间：
+				</div>
+				<div class="control-input select-small control-text lh40 relative1 cl">
+					<input type="text" placeholder="采购数量" name="delivery_time" class=" input-text input-text-long1 left-wrap input-company-name">
 				</div>
 			</div>
 			<div align="center">
-				<input type="button" class="button green-button mb" value="保存"/>
+				<input type="submit" class="button green-button mb" value="保存"/>
 			</div>
 		</form>
 	</div>
